Bug 1402818 - Set hwnd_ to NULL in PlatformUIThread::Stop(); r=pehrsons

We only create an event window in Start() if hwnd_ is NULL, but Stop() does
not set it to NULL. This causes the thread to no longer be a GUI thread if
Stop() and then Start() is called on the same thread leading to assertion
failures.

MozReview-Commit-ID: 5TpazUCqBuR